--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,2 +1,4 @@
-<%= post.username %>
-<%= post.title %>
+<div class "post">
+  <small><%= post.username %> posted <%= time_ago_in_words(post.created_at) %> ago</small>
+  <%= post.title %>
+</div>
