Add sign out button

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,8 +4,9 @@
     <ul class="nav navbar-nav navbar-right">
       <li><%= link_to "Write a story", new_post_path %></li>
       <% if user_signed_in? %>
-        <%= current_user.email %>
-        <% else %>
+        <li><a href="#"><%= current_user.email %></a></li>
+        <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+      <% else %>
         <li><%= link_to "Sign in / Sign up", new_user_session_path %></li>
       <% end %>
     </ul>
