--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,4 +1,6 @@
-<div class "post">
-  <small><%= post.username %> posted <%= time_ago_in_words(post.created_at) %> ago</small>
-  <%= post.title %>
+<div class="post-panel">
+  <%= avatar_for(post.user, size: 40) %>
+  <%= post.username %>
+  <h3><%= post.title %></h3>
+  <p><%= post.all_tags %></p>
 </div>
