--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -13,12 +13,15 @@
     </ul>
   </div>
   <% end %>
-  
+
   <%= f.label :title %>
   <%= f.text_field :title %>
 
   <%= f.label :body %>
   <%= f.text_area :body %>
+
+  <%= f.label :all_tags %>
+  <%= f.text_field :all_tags %>
 
   <%= f.submit "Publish" %>
 <% end %>
