--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,4 +3,16 @@
 <%= avatar_for(@user) %>
 
 <%= @user.description %>
-<%= link_to "Edit", edit_user_path(@user) %>
+<% if user_signed_in? && current_user?(@user) %>
+  <%= link_to "Edit", edit_user_path(@user) %>
+<% end %>
+
+<% if user_signed_in? && !current_user?(@user) %>
+  <% if current_user.following?(@user) %>
+    <%= button_to "Unfollow", relationships_path(user_id: @user.id),
+      method: :delete, class: "button" %>
+  <% else %>
+    <%= button_to "Follow", relationships_path(user_id: @user.id),
+        class: "button" %>
+  <% end %>
+<% end %>
